k8s/keycloak/working-keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-simple
  namespace: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-simple
  template:
    metadata:
      labels:
        app: keycloak-simple
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:24.0.5
        args: ["start-dev", "--hostname=keycloak.local", "--hostname-admin=keycloak.local", "--http-enabled=true", "--proxy=edge"]
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloak
spec:
  selector:
    app: keycloak-simple
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: keycloak
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: keycloak.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 80
